# AIr-port-CV

./: .gitignore  README.md  facemaskposedetection.py  main.py  pyproject.toml  requirements.txt  utils.py
RetinaNet/: peopledetectionretinanet.py  predictretinanet.py
VGG19/: modelvgg19.py
Yolov8/: facedetectionyolov8.py  maskdetectionyolov8.py  peopledetectionyolov8.py  predictyolov8.py
data/statistics/: merged_data.csv  predicted_tagged.csv  predicted_tagged_r_y_v.csv  predicted_tagged_y_y_y.csv  readme.txt  truly_tagged.csv
